# IKSCompiler

./: .gitignore  CMakeLists.txt  CMakeLists_Etapa0.txt  lex.yy.c  lex.yy.h  parser.output  parser.tab.c  parser.tab.h  parser.y  parser.y~  readme.t2t  scanner.l  scanner.l~  temp  testall.sh
doc/: readme.t2t
include/: comp_dict.h  comp_dict.h~  comp_graph.h  comp_list.h  comp_programlist.h  comp_simplelist.h  comp_stack.h  comp_tree.h  comp_tree.h~  iks_ast.h  iks_ast.h~  iloc.h  main.h  opt.h  symbol_table.h  util.h
src/: comp_dict.c  comp_dict.c~  comp_graph.c  comp_list.c  comp_programlist.c  comp_simplelist.c  comp_stack.c  comp_tree.c  comp_tree.c~  grafo  gv.c  iloc.c  main.c  opt.c  symbol_table.c
test/: comp_dict_tst.c  comp_graph_tst.c  comp_list_tst.c  comp_tree_tst.c  test.c
test/input/: and.iks  bubble.txt  certa14.txt  certa14.txt~  dowhile.iks  errada00.txt  if.iks  matriz.iks  matriz2.iks  myfirstprogram  neander.txt  soma.iks  unarios.txt  while.iks
test/step0/: comp_list_tst.c
test/step2/: errada21.txt  neander.txt
test/step4/: testall.sh
test/step5/: ifelse.iks  matriz.iks  testall.sh
test/step6/: dowhile.iks
test/step7/: iloc01.k  iloc02.k  iloc03.k  iloc05.k  iloc06.k  iloc07.k  iloc08.k  iloc09.k  iloc10.k
